--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="MissingTranslation">
     <string name="app_name">Administrador Biblioteca</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -7,4 +8,16 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+
+    <string name="button_delete">Excluir</string>
+    <string name="button_edit">Editar</string>
+    <string name="button_open">Abrir</string>
+    <string name="text_dialog">Apagar o livro </string>
+    <string name="text_yes">Sim</string>
+    <string name="text_no">No</string>
+    <string name="error_delete">Erro ao Deletar: </string>
+    <string name="delete_successful">Livro deletado</string>
+    <string name="tag_debug">Debug: </string>
+    <string name="tag_id">id</string>
+
 </resources>
